--- a/column-spanning-grid-sample.html
+++ b/column-spanning-grid-sample.html
@@ -42,10 +42,13 @@
         <div id="Grid"></div>        
 
 <script >
+    ej.grids.Grid.Inject(ej.grids.Sort);
+    
     var grid = new ej.grids.Grid({
             dataSource: columnSpanData,
             queryCellInfo: QueryCellEvent,
             gridLines: 'Both',
+            allowSorting: true,
             columns: [
                 { field: 'EmployeeID', headerText: 'Employee ID', isPrimaryKey: true, textAlign: 'Right', width: 120 },
                 { field: 'EmployeeName', headerText: 'Employee Name', width: 200 },
